gitops/apps/guestbook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  selector:
    app: guestbook
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: NodePort
